--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
   .badge.f20{background:var(--f20);color:#fbfbfb;}
   .badge.rest{background:var(--rest);color:#303030;}
   .btn-today{font-weight:700}
+  /* 新增：页脚样式 */
+  footer{
+    margin-top: 32px;
+    margin-bottom: 24px;
+    font-size: 13px;
+    color: #999;
+    text-align: center;
+  }
 
 
 /* 下拉面板（不改变原有样式，仅新增） */
@@ -125,6 +133,9 @@
 </header>
 
 <div class="container"></div>
+<footer>
+  © 2025 Abigale · TEM Toolbox (Work Calendar)
+</footer>
 
 <script>
 
